Fix the excessive whitespace around blog items
Also remove the unnecessary metadata and
target=_blank.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1101,7 +1101,7 @@ p.code {
 -----------------------------------------*/
 .blog-item {
   color: #212121;
-  padding: 45px;
+  padding: 25px;
   position: relative;
   border: 1px solid #e6e6e6;
   overflow: hidden;
